--- a/index.html
+++ b/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infos - Derow</title>
     <meta name="description" content="Ce site sert à suivre les actualités de Derow. Soit le premier à être au courant des nouvelles sortie du rappeur !">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello, world !</h1>
+    <section>
+      <article class="article1">
+        <header>
+          <img src="/public/assets/cover.jpg" alt="">
+        </header>
+        <footer>
+          <h2>Death Row</h2>
+          <p class="type">EP</p>
+          <p class="en-cours">18 octobre 2024</p>
+        </footer>
+      </article>
+      <article class="article2">
+        <div class="plateforme-container">
+          <div class="part1">
+            <img src="/public/assets/spotify-icon.png" alt="spotify-icon">
+            <h3 class="plateforme-name">Spotify</h3>
+          </div>
+          <div class="part2">
+            <a href="https://open.spotify.com/intl-fr/artist/4C3Vu1nqbTX06YM0fjFbNM?si=MJq0Avt_QF-emwYpayIJZw" target="_blank">Voir</a>
+          </div>
+        </div>
+      </article>
+    </section>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
