update spotify icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3 class="plateforme-name">Spotify</h3>
           </div>
           <div class="part2">
-            <a href="https://open.spotify.com/intl-fr/artist/4C3Vu1nqbTX06YM0fjFbNM?si=MJq0Avt_QF-emwYpayIJZw" target="_blank">Voir</a>
+            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/768px-Spotify_logo_without_text.svg.png" target="_blank">Voir</a>
           </div>
         </div>
       </article>
