--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
       <article class="article1">
         <header>
-          <img src="/public/assets/cover.jpg" alt="cover">
+          <img src="https://i.ibb.co/4RpxNHZ/Polish-20240908-162029948.jpg" alt="cover">
         </header>
         <footer>
           <h2>Death Row</h2>
