Update fav-icon & spotify icon & link to spotify

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/g7f6XRF/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infos - Derow</title>
     <meta name="description" content="Ce site sert à suivre les actualités de Derow. Soit le premier à être au courant des nouvelles sortie du rappeur !">
@@ -23,11 +23,11 @@
       <article class="article2">
         <div class="plateforme-container">
           <div class="part1">
-            <img src="/public/assets/spotify-icon.png" alt="spotify-icon">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/768px-Spotify_logo_without_text.svg.png" alt="spotify-icon">
             <h3 class="plateforme-name">Spotify</h3>
           </div>
           <div class="part2">
-            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/768px-Spotify_logo_without_text.svg.png" target="_blank">Voir</a>
+            <a href="https://open.spotify.com/intl-fr/artist/4C3Vu1nqbTX06YM0fjFbNM?si=qy1TMTi7QgqncCfc4jE64A" target="_blank">Voir</a>
           </div>
         </div>
       </article>
